Keep swapping icon button alignment, this fixes dropdown icon alignment

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -583,7 +583,7 @@
 .ui.icon.button > .icon {
   opacity: @iconButtonOpacity;
   margin: 0em;
-  vertical-align: baseline;
+  vertical-align: top;
   height: 0em;
 }
 
